# MacCleaner

./: .gitignore  MacCleaner.spec  README.md  build_dmg.sh  com.maccleaner.agent.plist  engine.spec  engine_main.py  install_agent.sh  main.py  pyproject.toml  run.sh
.github/workflows/: release.yml
assets/: MacCleaner.icns
src/maccleaner/: __init__.py  config.py  engine_cli.py
src/maccleaner/models/: category.py  scan_result.py
src/maccleaner/scanners/: base.py  browser_scanner.py  build_cache_scanner.py  cache_scanner.py  docker_scanner.py  duplicate_scanner.py  homebrew_scanner.py  log_scanner.py  mail_scanner.py  node_modules_scanner.py  node_scanner.py  python_cache_scanner.py  temp_scanner.py  trash_scanner.py  venv_scanner.py  xcode_scanner.py
src/maccleaner/services/: ai_service.py  cleaner_service.py  notification_service.py  storage_analyzer.py
src/maccleaner/ui/: cli.py  dashboard.py  formatting.py
swift-ai/: build.sh  maccleaner-ai.swift
swift-app/: Info.plist  MacCleaner-dev.entitlements  MacCleaner.entitlements  Package.swift  build.sh
swift-app/Sources/MacCleanerApp/: AIAssistantView.swift  AppIntents.swift  Engine.swift  MacCleanerApp.swift  MainView.swift  MainWindowController.swift  MenuBarController.swift  NotificationService.swift  ScanAdvisor.swift  ScanEngine.swift  SettingsView.swift  SplashView.swift  Themes.swift
tests/integration/: test_scan_real_tmp.py
tests/unit/: test_formatting.py
tests/unit/scanners/: test_base_scanner.py  test_browser_scanner.py  test_build_cache_scanner.py  test_cache_scanner.py  test_node_scanner.py  (+5 more)
(+8 files in other folders)
